--- a/src/app/share/component/header/header.component.html
+++ b/src/app/share/component/header/header.component.html
@@ -20,6 +20,9 @@
   <div class="ui-g-1">
     <a routerLink="/firebase" routerLinkActive="active">FireBase</a>
   </div>
+  <div class="ui-g-1">
+    <a routerLink="/tester" routerLinkActive="active">Tester</a>
+  </div>
 </div>
 
 
