--- a/src/app/share/component/header/header.component.html
+++ b/src/app/share/component/header/header.component.html
@@ -1,30 +1,32 @@
-<div class="ui-g" style="text-align: center;font-size: 20px;"> Fire & Soul</div>
-<hr>
-<div class="ui-g">
-
-  <div class="ui-g-1">
-    <a routerLink="" routerLinkActive="active">Home</a>
-  </div>
-  <div class="ui-g-1">
-    <a routerLink="/stat" routerLinkActive="active">Stat</a>
-  </div>
-  <div class="ui-g-1">
-    <a routerLink="/travel" routerLinkActive="active">Travel</a>
-  </div>
-  <div class="ui-g-1">
-    <a routerLink="/battle" routerLinkActive="active">Battle</a>
-  </div>
-  <div class="ui-g-1">
-    <a routerLink="/googlemap" routerLinkActive="active">GoogleMap</a>
-  </div>
-  <div class="ui-g-1">
-    <a routerLink="/firebase" routerLinkActive="active">FireBase</a>
-  </div>
-  <div class="ui-g-1">
-    <a routerLink="/tester" routerLinkActive="active">Tester</a>
-  </div>
+<div style="text-align: center">
+  <div align="center"> Fire & Soul</div>
+  <hr>
+  <div style="width: 1200px;border-style: groove;text-align: center" align="center">
 </div>
 
-
+</div>
+<div class="ui-g-1">
+  <a routerLink="" routerLinkActive="active">Home</a>
+</div>
+<div class="ui-g-1">
+  <a routerLink="/stat" routerLinkActive="active">Stat</a>
+</div>
+<div class="ui-g-1">
+  <a routerLink="/travel" routerLinkActive="active">Travel</a>
+</div>
+<div class="ui-g-1">
+  <a routerLink="/battle" routerLinkActive="active">Battle</a>
+</div>
+<div class="ui-g-1">
+  <a routerLink="/googlemap" routerLinkActive="active">GoogleMap</a>
+</div>
+<div class="ui-g-1">
+  <a routerLink="/firebase" routerLinkActive="active">FireBase</a>
+</div>
+<div class="ui-g-1">
+  <a routerLink="/tester" routerLinkActive="active">Tester</a>
+</div>
+<br>
+<br>
 <hr>
 
