--- a/src/app/test/googlemap/googlemap.component.html
+++ b/src/app/test/googlemap/googlemap.component.html
@@ -5,10 +5,16 @@
     <button type="button" pButton label="Reset View" icon="fa-arrows" (click)="changeView(gmap.getMap())"></button>
     <button type="button" pButton label="Random" icon="fa-map-marker" (click)="randomMark()"></button>
     <button type="button" pButton label="A to B" icon="fa-map-marker" (click)="setRountMap(gmap.getMap())"></button>
+    <button type="button" pButton label="Get Area" icon="fa-map-marker" (click)="area(gmap.getMap())"></button>
+    <button type="button" pButton label="Get Distance" icon="fa-map-marker" (click)="dis(gmap.getMap())"></button>
 </span>
 
 <div>
     <p-gmap #gmap [options]="options" [overlays]="overlays" [style]="{'width':'100%','height':'580px'}" ></p-gmap>
 </div>
 
+<div>
+    <span style="width:300px;text-align: right">{{headtext}} : </span>
+    <span style="width:300px;text-align: left">{{text}} {{endtext}}</span>
+</div>
 
