--- a/src/app/page/component/statpanel/statpanel.component.html
+++ b/src/app/page/component/statpanel/statpanel.component.html
@@ -54,7 +54,7 @@
         <div class="ui-g" style="width: 500px;height: 220px;border-style: ridge;">
             <div class="ui-g-3">
                 <div class="ui-g-12" style="width: 100px;height: 120px">
-                    <img src="../../images/chars/1002.gif" align="middle" >
+                    <img src="../../images/monsters/1.gif" align="middle" >
                 </div>
                 <div class="ui-g-12">
                     --------------
