--- a/src/app/share/component/header/header.component.html
+++ b/src/app/share/component/header/header.component.html
@@ -1,31 +1,86 @@
 <div style="text-align: center">
   <div align="center"> Fire & Soul</div>
   <hr>
-  <div style="width: 1200px;border-style: groove;text-align: center" align="center">
 </div>
 
+<div>
+
+  <div class="ui-g-1" *ngIf="d==1">
+    <a routerLink="" routerLinkActive="active">Home</a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==1">
+    <a routerLink="/stat" routerLinkActive="active">Stat</a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==1">
+    <a routerLink="/travel" routerLinkActive="active">Travel</a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==1">
+    <a routerLink="/battle" routerLinkActive="active">Battle</a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==1">
+    <a></a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==1">
+    <a></a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==1">
+    <a></a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==1">
+    <a></a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==1">
+    <a></a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==1">
+    <a></a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==1">
+    <a></a>
+  </div>
+
+
+  <div class="ui-g-1" *ngIf="d==2">
+    <a routerLink="" routerLinkActive="active">Home</a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==2">
+    <a routerLink="/googlemap" routerLinkActive="active">GoogleMap</a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==2">
+    <a routerLink="/firebase" routerLinkActive="active">FireBase</a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==2">
+    <a routerLink="/tester" routerLinkActive="active">Tester</a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==2">
+    <a routerLink="/tutorial01" routerLinkActive="active">Tutorial01</a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==2">
+    <a routerLink="/tutorialEmp" routerLinkActive="active">TutorialEmp</a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==2">
+    <a></a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==2">
+    <a></a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==2">
+    <a></a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==2">
+    <a></a>
+  </div>
+  <div class="ui-g-1" *ngIf="d==2">
+    <a></a>
+  </div>
+
+
+  <div class="ui-g-1">
+    <p-dropdown [options]="dd" [(ngModel)]="d"></p-dropdown>
+  </div>
+
 </div>
-<div class="ui-g-1">
-  <a routerLink="" routerLinkActive="active">Home</a>
-</div>
-<div class="ui-g-1">
-  <a routerLink="/stat" routerLinkActive="active">Stat</a>
-</div>
-<div class="ui-g-1">
-  <a routerLink="/travel" routerLinkActive="active">Travel</a>
-</div>
-<div class="ui-g-1">
-  <a routerLink="/battle" routerLinkActive="active">Battle</a>
-</div>
-<div class="ui-g-1">
-  <a routerLink="/googlemap" routerLinkActive="active">GoogleMap</a>
-</div>
-<div class="ui-g-1">
-  <a routerLink="/firebase" routerLinkActive="active">FireBase</a>
-</div>
-<div class="ui-g-1">
-  <a routerLink="/tester" routerLinkActive="active">Tester</a>
-</div>
+
 <br>
 <br>
 <hr>
