--- a/src/app/page/component/battle/battle.component.html
+++ b/src/app/page/component/battle/battle.component.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div style="width: 100px;height: 120px;" align="center">
-            <img src="../../images/chars/1002.gif" alt="" style="margin-top: 30px">
+            <img src="../../images/monsters/1.gif" alt="" style="margin-top: 30px">
         </div>
 
         <div>{{textAtEnemy}}</div>
