--- a/src/app/share/component/header/header.component.html
+++ b/src/app/share/component/header/header.component.html
@@ -9,13 +9,13 @@
     <a routerLink="" routerLinkActive="active">Home</a>
   </div>
   <div class="ui-g-1" *ngIf="d==1">
-    <a routerLink="/stat" routerLinkActive="active">Stat</a>
+    <a routerLink="/fireandsoul" routerLinkActive="active">FireAndSoul</a>
   </div>
   <div class="ui-g-1" *ngIf="d==1">
-    <a routerLink="/travel" routerLinkActive="active">Travel</a>
+    <a></a>
   </div>
   <div class="ui-g-1" *ngIf="d==1">
-    <a routerLink="/battle" routerLinkActive="active">Battle</a>
+    <a></a>
   </div>
   <div class="ui-g-1" *ngIf="d==1">
     <a></a>
