--- a/src/app/test/firebase/firebase.component.html
+++ b/src/app/test/firebase/firebase.component.html
@@ -4,3 +4,10 @@
     {{char.name}}
   </li>
 </ul>
+<hr>
+<hr>
+<ul>
+  <li class="text" *ngFor="let char2 of chars2">
+    {{char2.name}}
+  </li>
+</ul>
